# odysseus

./: .env.example  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  Dockerfile  README.md  build-macos-app.sh  build-windows-portable.ps1  docker-compose.yml  launch-windows.ps1  pyproject.toml  setup.py  start-macos.sh
docs/: setup.md
services/stt/: stt_service.py
src/: markitdown_runtime.py  pdf_forms.py  pdf_runtime.py
tests/: test_document_render_pdf_iframe.py  test_markitdown_runtime.py  test_pdf_runtime.py
